# educational_robot

./: .gitignore  README.md
data/woder/: 星火大模型.docx  科大讯飞ROS（语言转文字）.docx
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
msc/fb096e68121077f46497246571dc8cc2/: u.data  urec.data  usr.cdata1737166402  usr.cdata1737166406  usr.cdata1737166411  usr.cdata1737166413  usr.cdata1737166866  usr.cdata1737166905  usr.cdata1737166909  usr.cdata1737166916  usr.cdata1737166918  usr.cdata1737166920  usr.cdata1737166923  usr.cdata1737166925  usr.cdata1737166929  usr.cdata1737166932  usr.cdata1737166933  usr.cdata1737166941  usr.cdata1737166946  usr.cdata1737166948  usr.cdata1737166950  usr.cdata1737166966  usr.cdata1737166970  usr.cdata1737166973  usr.cdata1737166977  usr.cdata1737166986  usr.cdata1737166987  usr.cdata1737251356  usr.cdata1737251359  usr.cdata1737251389  usr.cdata1737251394  usr.cdata1737251403  usr.cdata1737251417  usr.cdata1737251433  usr.cdata1737251438  usr.cdata1737251441  usr.cdata1737251448  usr.cdata1737251450  usr.cdata1737251462  usr.cdata1737251466  (+91 more)
py/: SparkApi.py  SparkPythondemo.py
src/AI/: CMakeLists.txt
src/fastGPT/: CMakeLists.txt  package.xml
src/fastgpt/: CMakeLists.txt
src/hello/: CMakeLists.txt
src/language/: CMakeLists.txt  package.xml
src/mic/: CMakeLists.txt  package.xml
src/voice/: CMakeLists.txt
src/voice/include/voice/: linuxrec.h  msp_cmn.h  qise.h  qisr.h  qtts.h
src/voice/src/: iat_online_record_sample.cpp  linuxrec.cpp  speech_recognizer.c
src/xf_mic_asr_offline_line/: package.xml
环境/: robot.sh
(+94 files in other folders)
